Fix hamburger visibility

--- a/record-recorder/src/style.css
+++ b/record-recorder/src/style.css
@@ -72,7 +72,7 @@ input[type="text"] {
   top: 0;
   left: 0;
   cursor: pointer;
-  opacity: 1;
+  opacity: 0;
 }
 
 .hamburger {
@@ -96,7 +96,7 @@ input[type="text"] {
   position: relative;
   top: 0;
   left: 0;
-  background: white;
+  background: black;
   height: 2px;
   width: 60%;
   transition: all  0.4s ease;
@@ -110,7 +110,7 @@ TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
   content: '';
   position: absolute;
   top: -10px;
-  background: white;
+  background: black;
   width: 100%;
   height: 2px;
   transition: all  0.4s ease;
